objects/CSS_WS_Warranty_SRT__c.object
<CustomObject>
    <description>SRT object Child of Warranties</description>
    <fields>
        <fullName>CSS_WS_Access_Code__c</fullName>
        <label>Access Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Actual_Hours__c</fullName>
        <description>This value will be auto-populated based on the multiplication of % of SRT hours * SRT Hours (HRS_EXT X PORC_AJUSTE)</description>
        <label>Extended Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Adjust_Percentage__c</fullName>
        <description>This field is calculated based on what Cummins paid to SLP after overlap calculation.</description>
        <label>% Adjustment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Amount__c</fullName>
        <description>This value will be auto-populated based on the multiplication of % of SRT hours * Hrs Pagar (HRS_PAGAR X TARIFA)</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Extended_Hours__c</fullName>
        <description>This value will be auto-populated based on the calculation of Quantity * Hours (HRS_UNITARIO X QTY)</description>
        <label>SRT Hours</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_GSQ_Assignment__c</fullName>
        <label>GSQ Assignment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Hours_Percentage__c</fullName>
        <label>Hours (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Hours__c</fullName>
        <label>Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Labor_Rate__c</fullName>
        <label>Labor Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Offsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_OutOfChassis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Chassis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Overlap_Hours__c</fullName>
        <description>Calculated value based on OVERLAPS Hours from USA. This validation will be pulled from ODM (IBM Rules engine) (This needs to be reviewed by the CSS leadership team) (The value we obtain from Siebel is an amount of hours).  This logic should be called with every change (adding/deleting lines) in the SRT section.</description>
        <label>Overlap Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Requested_Amount__c</fullName>
        <label>Requested Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRT__c</fullName>
        <description>SRT Code</description>
        <label>SRT</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Step_Id__c</fullName>
        <label>SRT StepId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_WarrantyID__c</fullName>
        <description>Warranty ID (parent)</description>
        <label>Warranty</label>
        <referenceTo>CSS_WS_Warranty__c</referenceTo>
        <relationshipLabel>Warranty SRT</relationshipLabel>
        <relationshipName>Warranty_SRT</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CameFromWebService__c</fullName>
        <label>Came From Web Service</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CSS WS Warranty SRT</label>
    <nameField>
        <label>SF SRT ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS WS Warranty SRTs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>